<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_blue"
    tools:context=".activities.MusicPlayerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="20dp"
            android:ellipsize="marquee"
            android:padding="20dp"
            android:singleLine="true"
            android:text="@string/songTitle"
            android:textColor="@color/crystal_blue"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:id="@+id/musicIcon"
        android:src="@drawable/default_image"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_above="@id/controls"
        android:contentDescription="@string/songIcon"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/controls"
        android:padding="40dp">
        
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seek_bar"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_bar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/currentTime"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_bar"
            android:id="@+id/total_time"
            android:text="@string/durationTime"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_time"
            android:padding="20dp"
            android:layout_marginStart="-30dp"
            android:layout_marginEnd="-30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/previous"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:id="@+id/previous"
                android:contentDescription="@string/goToPreviousSongIcon"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/next"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/next"
                android:contentDescription="@string/goToNextSongIcon"/>

            <ImageView
                android:id="@+id/pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/pauseIcon"
                android:src="@drawable/pause" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/replay_10"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/previous"
                android:id="@+id/backwards10"
                android:contentDescription="@string/goBackwards"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/forward_30"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/pause"
                android:id="@+id/forward30"
                android:contentDescription="@string/forward"
                android:layout_marginStart="10dp"/>

        </RelativeLayout>

    </RelativeLayout>





</RelativeLayout>